--- a/src/pages/FicheLogement.scss
+++ b/src/pages/FicheLogement.scss
@@ -40,6 +40,8 @@
         display: flex;
         flex-direction: row;
         gap: 80px;
+        margin-bottom: 100px;
+
         
         .collapse-title h2 {
             font-size:18px;
